<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/autehntification"
    android:layout_height="match_parent"
    tools:context=".views.Authentification">

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="470dp"
        android:id="@+id/btnLogin"
        android:background="@drawable/rounded_button"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="23dp">
    </Button>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/textRegister"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/textHere"
            android:id="@+id/txtRegister"
            android:layout_marginTop="50dp"
            android:textColor="#976626"
            android:textSize="22dp"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>


</LinearLayout>